# api-response-visualizer

./: README.md  pyproject.toml  requirements.txt
examples/: sample_response.json
src/: data_source.py  flatten.py  main.py
tests/: test_flatten.py
