[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-response-visualizer"
version = "0.1.0"
description = "Fetch and flatten API responses into analysis-friendly tables."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
]

[project.scripts]
api-response-visualizer = "src.main:main"

[tool.setuptools]
packages = ["src"]
